Added Javacord and wrote simple test.

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.javacord</groupId>
+            <artifactId>javacord</artifactId>
+            <version>3.5.0</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
