--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,10 @@ steps:
       goals: 'spring-boot:build-image'
       publishJUnitResults: false
       jdkVersionOption: '1.17'
+  
+  - task: Docker@2
+    inputs:
+      containerRegistry: 'jdlContainersConnection'
+      repository: 'alert-bot'
+      command: 'push'
+      tags: 'latest'
