Added necessary config to pom file.
The config should set the img name of the docker file to be correct.

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <image>
+                        <name>jdlcontainers.azurecr.io/${project.artifactId}</name>
+                    </image>
+                    <layers>
+                        <enabled>true</enabled>
+                        <includeLayerTools>true</includeLayerTools>
+                    </layers>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
