--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,29 +9,43 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-  - task: Maven@3
-    inputs:
-      mavenPomFile: 'pom.xml'
-      mavenOptions: '-Xmx3072m'
-      javaHomeOption: 'JDKVersion'
-      jdkVersionOption: '1.17'
-      jdkArchitectureOption: 'x64'
-      publishJUnitResults: true
-      testResultsFiles: '**/surefire-reports/TEST-*.xml'
-      goals: 'package'
+jobs: 
+  - job: BuildJob
+    displayName: Builds the maven file, composes a Docker Image, and pushes the Docker image to Azure Container Registry
+    steps:
+      - task: Maven@3
+        inputs:
+          mavenPomFile: 'pom.xml'
+          mavenOptions: '-Xmx3072m'
+          javaHomeOption: 'JDKVersion'
+          jdkVersionOption: '1.17'
+          jdkArchitectureOption: 'x64'
+          publishJUnitResults: true
+          testResultsFiles: '**/surefire-reports/TEST-*.xml'
+          goals: 'package'
 
-  - task: Maven@3
-    displayName: Build Docker image
-    inputs:
-      mavenPomFile: 'pom.xml'
-      goals: 'spring-boot:build-image'
-      publishJUnitResults: false
-      jdkVersionOption: '1.17'
+      - task: Maven@3
+        displayName: Build Docker image
+        inputs:
+          mavenPomFile: 'pom.xml'
+          goals: 'spring-boot:build-image'
+          publishJUnitResults: false
+          jdkVersionOption: '1.17'
+      
+      - task: Docker@2
+        inputs:
+          containerRegistry: 'jdlContainersConnection'
+          repository: 'alert-bot'
+          command: 'push'
+          tags: 'latest'
   
-  - task: Docker@2
-    inputs:
-      containerRegistry: 'jdlContainersConnection'
-      repository: 'alert-bot'
-      command: 'push'
-      tags: 'latest'
+  - deployment: VMDeploy
+    displayName: Deploy to VM
+    environment:
+      name: alert-bot-env-prod
+      resourceType: VirtualMachine
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+            - script: echo "Hello World!"
