Removed deploy step and added variable test.
Probably going to change the Continuous Deployment methodology, so I removed that, at least until I've finalised plans for that.

To load the APIKey necessary for the Discord Bot to function into the build I plan on using DevOps Variable Groups, and this is testing to see if that works like expected.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,9 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
+  
+variables:
+  - group: alert-bot-variables
 
 jobs: 
   - job: BuildJob
@@ -38,14 +41,5 @@ jobs:
           repository: 'alert-bot'
           command: 'push'
           tags: 'latest'
-  
-  - deployment: VMDeploy
-    displayName: Deploy to VM
-    environment:
-      name: alert-bot-env-prod
-      resourceType: VirtualMachine
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-            - script: echo "Hello World!"
+      - script: echo Test key is $(test-discord-bot-key)
+        displayName: Run Variable Group test
